# project_tools

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  WEB_GUI_README.md  project_setup.py  pyproject.toml  requirements-web.txt  setup.py  start_web_gui.py  tox.ini  version_manager.py
.github/workflows/: test.yml
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/pages/: Dashboard.tsx  IntelligencePage.tsx  TodoPage.tsx  VersionPage.tsx
frontend/src/services/: api.ts
frontend/src/store/: intelligenceSlice.ts  socketSlice.ts  store.ts  todosSlice.ts  versionsSlice.ts
project_tools/: __init__.py  _todo_manager.py  _version_manager.py  claude_integration.py  cli.py  github_integration.py  todo_manager.py
project_tools/formatters/: __init__.py  console_formatter.py  email_formatter.py
project_tools/intelligence/: __init__.py  compass.py  direction.py  file_manager.py  portfolio.py  project_intelligence.py  reflection.py  task_chains.py  templates.py
project_tools/web_gui/: __init__.py  app.py
project_tools/web_gui/api/: __init__.py  intelligence.py  todos.py  versions.py
scripts/: example_config.json  example_config.yaml  verify_cli_docs.py
tests/: conftest.py  test_api_integration.py  test_cleanup.py  test_cli_doc_sync.py  test_cli_integration.py  test_packaging.py  test_web_gui.py
tests/fixtures/: sample_changelog.json  sample_todo.json
