[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "project-tools"
dynamic = ["version"]
description = "Universal project management tools for todos, versioning, and development workflows"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control",
    "Topic :: Utilities"
]
dependencies = [
    "colorama>=0.4.0",
    "tabulate>=0.8.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800"
]

[project.urls]
Homepage = "https://github.com/yourusername/project-tools"
Repository = "https://github.com/yourusername/project-tools"
Issues = "https://github.com/yourusername/project-tools/issues"

[project.scripts]
project-tools = "project_tools.cli:main"

[tool.setuptools]
packages = ["project_tools", "project_tools.formatters"]

[tool.setuptools.dynamic]
version = {attr = "project_tools.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=project_tools --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ['py37']

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true